# cameleon-chess

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  baub_chess  cmake_install.cmake  main.cpp  nano.save  notes
ChessEngine/: Board.h  BoardRep.h  BoardRepresentation.cpp  BoardRepresentation.h  Constants.h  Debug.h  Engine.cpp  Engine.h  Evaluation.h  Interfacing.h  OpeningBookHandler.h  Search.h  Utility.h  bb.cpp  bb.h  board_representation.cpp  board_representation.h  cli.cpp  cli.h  debug.cpp  debug.h  display.cpp  display.h  evaluation.cpp  evaluation.h  misc.h  position.cpp  position.h  search.cpp  search.h  uci.cpp  uci.h
src/: bitboard.h  defs.h  eval.cpp  eval.h  movegen.h  position.cpp  position.h  search.cpp  search.h  types.h  uci.cpp
